# pdf-ocr-pipeline

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  ocroutput.txt  ocroutput.txt.old  package-lock.json  pyproject.toml  pytest.ini  requirements-dev.txt  segment.json.old  segments2.json  setup.py  todos.md  tox.ini
.github/workflows/: ci.yml
docs/: api.md  api_reference.md  contributing.md  first-steps.md  index.md  installation.md  project_organization.md  quickstart.md  troubleshooting.md  usage_guide.md
docs/api/: index.md
docs/assets/images/: workflow-diagram.md  workflow.md
docs/help/: installation.md  troubleshooting.md
docs/stylesheets/: extra.css
docs/tasks/: analyze-documents.md  batch-process.md  extract-text.md  segment-documents.md
docs/user-guide/: ai-analysis.md  command-line.md  index.md  ocr-options.md  programming.md
examples/: __init__.py  ocr_and_analyze.sh  process_dir.sh  programmatic_usage.py  segment_pdf.sh
src/pdf_ocr_pipeline/: __init__.py  __main__.py  cli.py  code_export.py  config.py  errors.py  llm_client.py  logging_utils.py  ocr.py  segment_cli.py  segmentation.py  settings.py  summarize.py  types.py
src/pdf_ocr_pipeline/templates/: __init__.py  gpt_system_prompt.txt  segment_prompt.txt
tests/: __init__.py  conftest.py  test_advanced_pipeline.py  test_basic.py  test_cli.py  test_cli_error_handling.py  test_end_to_end_llm.py  test_llm_stub.py  test_ocr.py  test_pipeline.py  test_process_pdf.py  test_segmentation_golden.py  test_show_segment_prompt.py  test_summarize.py  test_summarize_edge_cases.py
tests/fixtures/: segmentation_golden.json
